src/main/java/org/example/rippleback/core/error/exceptions/common/UnAuthorizedException.java
package org.example.rippleback.core.error.exceptions.common;

public class UnAuthorizedException extends RuntimeException {
    public UnAuthorizedException(String message) {
        super(message);
    }
}
